# CLI-for-AWS-Incident-Detection-and-Response

./: CHANGELOG.md  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: auto_release.yml  pypi_upload.yml  secret_scanning.yml  slack_notifications.yml  version_bump.yml
Guide/: appendix.md  getting-started.md  iam-policies.md  unattended-mode.md  workflows.md
Guide/cli-usage/: apm-integration.md  cloudwatch-alarms.md  update-workload.md  workload-registration.md
Guide/iam-policies/: general-cli.json
src/aws_idr_customer_cli/: _version.py  main.py
src/aws_idr_customer_cli/core/: decorators.py  registry.py
src/aws_idr_customer_cli/data_accessors/: alarm_accessor.py  base_accessor.py  cloudformation_accessor.py  cloudfront_accessor.py  cloudwatch_metrics_accessor.py  dynamodb_accessor.py  eventbridge_accessor.py  keyspaces_accessor.py  lambda_accessor.py  logs_accessor.py  rds_accessor.py  resource_tagging_accessor.py  s3_accessor.py  sns_accessor.py  support_case_accessor.py
src/aws_idr_customer_cli/models/: alarm_models.py  non_interactive_config.py
src/aws_idr_customer_cli/modules/: accessors.py  base.py  boto_clients.py  service_clients.py
src/aws_idr_customer_cli/services/: non_interactive_alarm_ingestion_service.py  non_interactive_alarm_service.py  non_interactive_base_service.py  non_interactive_workload_service.py  non_interactive_workload_update_service.py  support_case_service.py
src/aws_idr_customer_cli/utils/: constants.py  feature_flags.py  log_handlers.py  mlo.py  (+3 more)
(+55 files in other folders)
