[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aws-idr-cli"
dynamic = ["version"]
dependencies = [
    "arnparse>=0.0.2",
    "aws-lambda-powertools==3.7.0",
    "boto3-stubs[cloudwatch,ec2,essential,iam,resourcegroupstaggingapi,sts,support]==1.38.46",
    "boto3<2.0.0,==1.34.34",
    "click==8.1.8",
    "colorama==0.4.6",
    "cryptography==45.0.3",
    "dataclasses-json==0.6.7",
    "injector==0.21.0",
    "pyyaml>=6.0",
    "questionary>=2.0.0",
    "retry==0.9.2",
    "rich==14.0.0"
]
requires-python = ">=3.9"
readme = "README.md"

[tool.hatch.version]
source = "code"
path = "src/aws_idr_customer_cli/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/aws_idr_customer_cli"]
include = [
    "src/aws_idr_customer_cli/utils/create_alarm/idr_alarm_templates/*.yaml",
]

[project.scripts]
idrcli = "aws_idr_customer_cli.main:main"
